Fix center alignment in homepage navbar

--- a/contents/styles/main.less
+++ b/contents/styles/main.less
@@ -20,6 +20,7 @@ body {
 //
 #navigation {
     .box-shadow(@shadow: 0 1px 3px rgba(0, 0, 0, 0.25));
+    text-align: left;
 }
 
 
